--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Sora:wght@100..800&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link rel="icon" type="image/png" href="favicon.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="fv/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="fv/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="fv/favicon-16x16.png">
     <link rel="manifest" href="fv/site.webmanifest">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/js-yaml/4.1.0/js-yaml.min.js"></script>
 </head>
 <body>
     <div class="container">
