Adding refresh button + optional mobile bug fix

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/js-yaml/4.1.0/js-yaml.min.js"></script>
 </head>
 <body>
+    <div class="refresh-icon">
+        <i class="fas fa-sync-alt"></i>
+    </div>
     <div class="container">
         <header>
             <div class="logo">
