--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alora, | Reimagining Supply Chain Management</title>
+    <title>Alora, Reimagining Supply Chain Management</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -29,7 +29,7 @@
         <main>
             <div class="hero">
                 <h1>The Future of Supply Chain Management</h1>
-                <p class="subtitle">Revolutionizing direct supply-chain orchestration through intelligent automation</p>
+                <p class="subtitle">Revolutionizing supply-chain orchestration through intelligent automation</p>
                 
                 <div class="cta-container">
                     <div class="contact-button">
